<resources>
    <string name="app_name">Noted</string>

    <string name="dialog_title">About Us</string>
    <string name="dialog_text">Noted\u00AE is a note taking app created by Paolo A. Delos Reyes, Tadhg McCarthy, and Raphael T. Zapanta. Made on Decemeber 2018. (uWu)</string>

    <string name="menu_newnote">New Note</string>
    <string name="menu_editnote">Edit Note</string>
    <string name="menu_deletenote">Delete ALL Notes!!!</string>
    <string name="menu_sort">Sort By ???</string>
    <string name="menu_settings">Settings (view db)</string>
    <string name="menu_about">About Us</string>

    <string name="hint_note">Note...</string>
    <string name="hint_label">Label(s)</string>
    <string name="hint_color">Color ?</string>
    <string name="hint_hour">Hour</string>
    <string name="hint_minute">Minute</string>
    <string name="hint_second">Second</string>
    <string name="hint_time">Time</string>

    <string name="checkbox_pin">Pin Note</string>
    <string name="button_delete">Delete Note</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_add">+</string>

    <string name="alert_delete_title">WARNING</string>
    <string name="alert_delete_text">Are you sure you want to delete this note?</string>
    <string name="alert_delete_positive">Yes, I\'m sure!</string>
    <string name="alert_delete_negative">No, Cancel</string>

    <string name="alert_add_title">Adding Notes</string>
    <string name="alert_add_text">What type of note?</string>
    <string name="alert_add_positive">Regular</string>
    <string name="alert_add_negative">Checklist</string>

</resources>
