<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNoteActivity">

    <EditText
        android:id="@+id/editTextData"
        android:layout_width="0dp"
        android:layout_height="279dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/holo_orange_light"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint_note"
        android:inputType="textMultiLine"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPinned" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/button_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEdit" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/menu_editnote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextColor"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_dark"
        android:ems="10"
        android:hint="@string/hint_color"
        android:inputType="text"
        android:paddingLeft="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGroup" />

    <EditText
        android:id="@+id/editTextGroup"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_dark"
        android:ems="10"
        android:hint="@string/hint_label"
        android:inputType="text"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextData" />

    <CheckBox
        android:id="@+id/checkBoxPinned"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_orange_light"
        android:paddingRight="4dp"
        android:text="@string/checkbox_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<Spinner-->
    <!--android:id="@+id/spinner1"-->
    <!--android:layout_width="321dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginEnd="16dp"-->
    <!--android:layout_marginLeft="16dp"-->
    <!--android:layout_marginRight="16dp"-->
    <!--android:layout_marginStart="16dp"-->
    <!--android:layout_marginTop="24dp"-->
    <!--android:background="@android:drawable/btn_dropdown"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/editTextData" />-->

</android.support.constraint.ConstraintLayout>