<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputNewActivity">

    <EditText
        android:id="@+id/editTextData"
        android:layout_width="0dp"
        android:layout_height="272dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:autoText="false"
        android:background="@android:color/holo_orange_light"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint_note"
        android:inputType="textMultiLine"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPinned" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="42dp"
        android:background="@android:color/darker_gray"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCreate"
        app:layout_constraintTop_toBottomOf="@+id/inputMinute" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="42dp"
        android:background="@android:color/holo_blue_light"
        android:text="Create Note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSeconds" />

    <EditText
        android:id="@+id/editTextGroup"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_bright"
        android:ems="10"
        android:hint="@string/hint_label"
        android:inputType="text"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextData" />

    <CheckBox
        android:id="@+id/checkBoxPinned"
        android:layout_width="93dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_orange_light"
        android:paddingRight="4dp"
        android:text="Pin Note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="Time:"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGroup" />

    <EditText
        android:id="@+id/inputHour"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_hour"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/timeText"
        app:layout_constraintTop_toBottomOf="@+id/editTextGroup" />

    <EditText
        android:id="@+id/inputMinute"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_minute"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/inputHour"
        app:layout_constraintTop_toBottomOf="@+id/editTextGroup" />

    <EditText
        android:id="@+id/inputSeconds"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_second"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/inputMinute"
        app:layout_constraintTop_toBottomOf="@+id/editTextGroup" />

    <!--<Spinner-->
        <!--android:id="@+id/spinner1"-->
        <!--android:layout_width="321dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="16dp"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginTop="24dp"-->
        <!--android:background="@android:drawable/btn_dropdown"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/editTextData" />-->

</android.support.constraint.ConstraintLayout>